Edited some files with publishing website

--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-<title>"index"</title>
-<link rel="stylesheet" href="aesthetic.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>title</title>
+    <link rel="stylesheet" href="aesthetic.css">
+
 </head>
-
 <body>
-<p>"I hate programming"</p>
-
-
-
-<div class="imgHolder"></div>
-<div class="imgHolder2"></div>
-
-<!-- <img src = "images/hash.png" class="imgHolder" alt="hash"> -->
-
-<script src="image_processing.js"></script> 
-
-
-
-
+    <div class="title">Akoot & Co. Yearbook</div>
+    <div class="subtitle">2023-2024</div>
+    <div class="click-area right-side">
+    <script>
+        document.querySelector('.right-side').addEventListener('click', function() {
+            window.location.href = 'index.html';
+        });
+    </script>
+    </div>
+    <div class="click-area left-side">
+        <script>
+            document.querySelector('.left-side').addEventListener('click', function() {
+                window.location.href = 'index.html';
+            });
+        </script>
+    </div>
 </body>
 </html>
