--- a/notable_builds.html
+++ b/notable_builds.html
@@ -8,19 +8,29 @@
 
 </head>
 <body>
-    <div class="img_holder"></div>
+    <div class="page_title">Notable Builds</div>
+
+    <div class="container">
+        <div class="build_hash_new_base"></div>
+        <div class="build_500am_base"></div>
+    </div>
+
+
+    <div class="container">
+        <div class="build_mail"></div>
+    </div>
 
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
-            window.location.href = 'index.html';
+            window.location.href = 'notable_builds.html';
         });
     </script>
     </div>
     <div class="click-area left-side">
         <script>
             document.querySelector('.left-side').addEventListener('click', function() {
-                window.location.href = 'index.html';
+                window.location.href = 'members.html';
             });
         </script>
     </div>
