--- a/members.html
+++ b/members.html
@@ -27,6 +27,25 @@
     <div class="head_vnrs"></div>
 </div>
 
+<div class="container">
+    <div class="head_bub"></div>
+</div>
+
+<div class="click-area right-side">
+    <script>
+        document.querySelector('.right-side').addEventListener('click', function() {
+            window.location.href = 'notable_builds.html';
+        });
+    </script>
+    </div>
+
+<div class="click-area left-side">
+    <script>
+        document.querySelector('.left-side').addEventListener('click', function() {
+            window.location.href = 'index.html';
+        });
+    </script>
+</div>
 
 
 
