--- a/notable_builds.html
+++ b/notable_builds.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>title</title>
+    <title>Notable Builds</title>
     <link rel="stylesheet" href="aesthetic.css">
 
 </head>
@@ -18,12 +18,18 @@
 
     <div class="container">
         <div class="build_mail"></div>
+        <div class="build_reno_tea_room"></div>
+    </div>
+
+    <div class="container">
+        <div class="build_prince_rat_axolotls"></div>
+        <div class="build_pink_spawn"></div>
     </div>
 
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
-            window.location.href = 'notable_builds.html';
+            window.location.href = 'september.html';
         });
     </script>
     </div>
