--- a/members.html
+++ b/members.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-<title>members</title>
+<title>Server Members</title>
 <link rel="stylesheet" href="aesthetic.css">
 </head>
 
