Added table of contents

--- a/members.html
+++ b/members.html
@@ -31,6 +31,9 @@
     <div class="head_bub"></div>
 </div>
 
+<div class="back"><a href="table_of_contents.html">Back to Table of Contents</a></div>
+
+
 <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
@@ -42,7 +45,7 @@
 <div class="click-area left-side">
     <script>
         document.querySelector('.left-side').addEventListener('click', function() {
-            window.location.href = 'index.html';
+            window.location.href = 'about.html';
         });
     </script>
 </div>
