--- a/notable_builds.html
+++ b/notable_builds.html
@@ -26,6 +26,9 @@
         <div class="build_pink_spawn"></div>
     </div>
 
+    <div class="back"><a href="table_of_contents.html">Back to Table of Contents</a></div>
+
+
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
