--- a/september.html
+++ b/september.html
@@ -21,6 +21,8 @@
         <div class="event_mahoose_many"></div>
     </div>
 
+    <div class="back"><a href="table_of_contents.html">Back to Table of Contents</a></div>
+
 
     <div class="click-area right-side">
     <script>
