--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -3,17 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Akoot & Co. Yearbook</title>
+    <title>About</title>
     <link rel="stylesheet" href="aesthetic.css">
 
 </head>
 <body>
-    <div class="title">Akoot & Co. Yearbook</div>
-    <div class="subtitle">2023-2024</div>
+    <div class="page_title">Table of Contents</div>
+    <p>
+        <a href="index.html">Title</a><br>
+        <a href="about.html">About</a><br>
+        <a href="members.html">Server Members</a><br>
+        <a href="notable_builds.html">Notable Builds</a><br>
+        <a href="september.html">September 2023</a><br>
+
+    </p>
+
+
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
-            window.location.href = 'table_of_contents.html';
+            window.location.href = 'about.html';
         });
     </script>
     </div>
