Swapped about and table of contents

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
-            window.location.href = 'table_of_contents.html';
+            window.location.href = 'about.html';
         });
     </script>
     </div>
