--- a/members.html
+++ b/members.html
@@ -45,7 +45,7 @@
 <div class="click-area left-side">
     <script>
         document.querySelector('.left-side').addEventListener('click', function() {
-            window.location.href = 'about.html';
+            window.location.href = 'table_of_contents.html';
         });
     </script>
 </div>
