--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -22,14 +22,14 @@
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
-            window.location.href = 'about.html';
+            window.location.href = 'members.html';
         });
     </script>
     </div>
     <div class="click-area left-side">
         <script>
             document.querySelector('.left-side').addEventListener('click', function() {
-                window.location.href = 'index.html';
+                window.location.href = 'about.html';
             });
         </script>
     </div>
