Fixed layout for mobile

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     </p>
 
 
-    <div class="back"><a href="table_of_contents.html">Back to Table of Contents</a></div>
+    <!-- <div class="back"><a href="table_of_contents.html">Back to Table of Contents</a></div> -->
 
     <p></p>
     <div class="click-area right-side">
