--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 
 </head>
 <body>
-    <div class="title">Akoot & Co. Yearbook</div>
-    <div class="subtitle">2023-2024</div>
+    <div class="title_container">
+        <div class="title">Akoot & Co. Yearbook</div>
+        <div class="subtitle">2023-2024</div>
+        <!-- <h1>Akoot & Co. Yearbook</h1> -->
+    </div>
+    
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
