--- a/members.html
+++ b/members.html
@@ -3,7 +3,9 @@
 
 <head>
 <title>Server Members</title>
-<link rel="stylesheet" href="aesthetic.css">
+<link rel="stylesheet" href="main_style.css">
+<link rel="stylesheet" href="head_style.css">
+
 </head>
 
 <body>
@@ -23,6 +25,7 @@
     <div class="head_500am"></div>
     <div class="head_vnrs"></div>
     <div class="head_bub"></div>
+    <!-- <div class="head_jozef"></div> -->
 </div>
 
 <p><br><br></p>
