--- a/early_october.html
+++ b/early_october.html
@@ -3,24 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>September 2023</title>
+    <title>Early October 2023</title>
     <link rel="stylesheet" href="main_style.css">
     <link rel="stylesheet" href="event_style.css">
 
 
 </head>
 <body>
-    <div class="page_title">September 2023</div>
-    <div class="page_subtitle">Mahoose's Birthday</div>
+    <div class="page_title">October 2023</div>
+    <div class="page_subtitle">Opening of Second Shopping District</div>
 
     <div class="container">
-        <div class="event_mahoose_birthday_1"></div>
-        <div class="event_mahoose_birthday_2"></div>
-   
-        <div class="event_mahoose_boats"></div>
-        <div class="event_mahoose_many"></div>
+        <div class="event_taco_bell"></div>
+        <div class="event_mahoose_shop"></div>
     </div>
 
+    
     <div class="back"><a href="table_of_contents.html">Back to Table of Contents</a></div>
 
 
@@ -34,7 +32,7 @@
     <div class="click-area left-side">
         <script>
             document.querySelector('.left-side').addEventListener('click', function() {
-                window.location.href = 'notable_builds.html';
+                window.location.href = 'september.html';
             });
         </script>
     </div>
