--- a/notable_builds.html
+++ b/notable_builds.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notable Builds</title>
-    <link rel="stylesheet" href="aesthetic.css">
+    <link rel="stylesheet" href="main_style.css">
+    <link rel="stylesheet" href="build_style.css">
+
 
 </head>
 <body>
@@ -13,15 +15,10 @@
     <div class="container">
         <div class="build_hash_new_base"></div>
         <div class="build_500am_base"></div>
-    </div>
-
-
-    <div class="container">
+   
         <div class="build_mail"></div>
         <div class="build_reno_tea_room"></div>
-    </div>
-
-    <div class="container">
+    
         <div class="build_prince_rat_axolotls"></div>
         <div class="build_pink_spawn"></div>
     </div>
