--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="aesthetic.css">
+    <link rel="stylesheet" href="main_style.css">
 
 </head>
 <body>
