--- a/members.html
+++ b/members.html
@@ -25,7 +25,7 @@
     <div class="head_500am"></div>
     <div class="head_vnrs"></div>
     <div class="head_bub"></div>
-    <!-- <div class="head_jozef"></div> -->
+    <div class="head_jozef"></div>
 </div>
 
 <p><br><br></p>
