--- a/late_october.html
+++ b/late_october.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Early October 2023</title>
+    <title>Late October 2023</title>
     <link rel="stylesheet" href="main_style.css">
     <link rel="stylesheet" href="event_style.css">
 
@@ -11,12 +11,15 @@
 </head>
 <body>
     <div class="page_title">October 2023</div>
-    <div class="page_subtitle">Opening of Second Shopping District</div>
+    <div class="page_subtitle">Halloween Competitions</div>
 
     <div class="container">
-        <div class="event_taco_bell"></div>
-        <div class="event_mahoose_shop"></div>
+        <div class="event_bee_halloween"></div>
+        <div class="event_nova_halloween"></div>
+        <div class="event_nzzketch_halloween"></div>
+        <div class="event_picture_box_halloween"></div>
     </div>
+    
 
     
     <div class="back"><a href="table_of_contents.html">Back to Table of Contents</a></div>
@@ -32,7 +35,7 @@
     <div class="click-area left-side">
         <script>
             document.querySelector('.left-side').addEventListener('click', function() {
-                window.location.href = 'september.html';
+                window.location.href = 'early_october.html';
             });
         </script>
     </div>
