--- a/members.html
+++ b/members.html
@@ -26,6 +26,7 @@
     <div class="head_vnrs"></div>
     <div class="head_bub"></div>
     <div class="head_jozef"></div>
+    <div class="head_cow"></div>
 </div>
 
 <p><br><br></p>
