--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -15,6 +15,7 @@
         <a href="members.html">Server Members</a><br>
         <a href="notable_builds.html">Notable Builds</a><br>
         <a href="september.html">September 2023</a><br>
+        <a href="early_october.html">October 2023</a><br>
 
     </p>
 
