--- a/november.html
+++ b/november.html
@@ -3,23 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Late October 2023</title>
+    <title>November 2023</title>
     <link rel="stylesheet" href="main_style.css">
-    <link rel="stylesheet" href="event_style.css">
+    <link rel="stylesheet" href="misc_style.css">
 
 
 </head>
 <body>
-    <div class="page_title">October 2023</div>
-    <div class="page_subtitle">Halloween Competitions</div>
+    <div class="page_title">November 2023</div>
 
     <div class="container">
-        <div class="event_bee_halloween"></div>
-        <div class="event_nova_halloween"></div>
-        <div class="event_nzzketch_halloween"></div>
-        <div class="event_picture_box_halloween"></div>
+        <div class="misc_akoot_friends_sitting"></div>
+        <div class="misc_akoots"></div>
+        <div class="misc_double_akoots"></div>
+        <div class="misc_maltsburg_roads"></div>
+        <div class="misc_sego_house_purchase"></div>
     </div>
-    
 
     
     <div class="back"><a href="table_of_contents.html">Back to Table of Contents</a></div>
@@ -35,7 +34,7 @@
     <div class="click-area left-side">
         <script>
             document.querySelector('.left-side').addEventListener('click', function() {
-                window.location.href = 'early_october.html';
+                window.location.href = 'late_october.html';
             });
         </script>
     </div>
