--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -16,6 +16,7 @@
         <a href="notable_builds.html">Notable Builds</a><br>
         <a href="september.html">September 2023</a><br>
         <a href="early_october.html">October 2023</a><br>
+        <a href="november.html">November 2023</a><br>
 
     </p>
 
