--- a/november.html
+++ b/november.html
@@ -11,6 +11,8 @@
 </head>
 <body>
     <div class="page_title">November 2023</div>
+    <div class="page_subtitle">Misc. Images and Creation of Maltsburg</div>
+
 
     <div class="container">
         <div class="misc_akoot_friends_sitting"></div>
