Added to notable builds
Previously referred to as just "builds"

--- a/notable_builds.html
+++ b/notable_builds.html
@@ -21,6 +21,10 @@
     
         <div class="build_prince_rat_axolotls"></div>
         <div class="build_pink_spawn"></div>
+
+        <div class="build_aedan_house"></div>
+        <div class="build_joe_utopia"></div>
+
     </div>
 
     <div class="back"><a href="table_of_contents.html">Back to Table of Contents</a></div>
