--- a/november.html
+++ b/november.html
@@ -29,7 +29,7 @@
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
-            window.location.href = 'november.html';
+            window.location.href = 'early_december.html';
         });
     </script>
     </div>
