--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -17,6 +17,8 @@
         <a href="september.html">September 2023</a><br>
         <a href="early_october.html">October 2023</a><br>
         <a href="november.html">November 2023</a><br>
+        <a href="early_december.html">December 2023</a><br>
+
 
     </p>
 
