--- a/late_december.html
+++ b/late_december.html
@@ -29,7 +29,7 @@
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
-            window.location.href = 'late_december.html';
+            window.location.href = 'early_january.html';
         });
     </script>
     </div>
