--- a/members.html
+++ b/members.html
@@ -27,6 +27,7 @@
     <div class="head_bub"></div>
     <div class="head_jozef"></div>
     <div class="head_cow"></div>
+    <div class="head_neoma"></div>
 </div>
 
 <!-- <p><br><br></p> -->
