--- a/late_january.html
+++ b/late_january.html
@@ -19,6 +19,8 @@
         <div class="event_flower_fight_2"></div>
         <div class="event_survivor_1"></div>
         <div class="event_survivor_2"></div>
+        <div class="event_ipa_overload"></div>
+
     </div>
 
     
