--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -18,6 +18,7 @@
         <a href="early_october.html">October 2023</a><br>
         <a href="november.html">November 2023</a><br>
         <a href="early_december.html">December 2023</a><br>
+        <a href="early_december.html">January 2024</a><br>
 
 
     </p>
