--- a/members.html
+++ b/members.html
@@ -26,8 +26,15 @@
     <div class="head_vnrs"></div>
     <div class="head_bub"></div>
     <div class="head_jozef"></div>
-    <div class="head_cow"></div>
     <div class="head_neoma"></div>
+    <div class="head_mahoose"></div>
+    <div class="head_nova"></div>
+    <div class="head_harpy"></div>
+    <div class="head_yamda"></div>
+    <div class="head_men"></div>
+    <div class="head_women"></div>
+    <div class="head_big"></div>
+    <div class="head_cow"></div>
 </div>
 
 <!-- <p><br><br></p> -->
