--- a/late_december.html
+++ b/late_december.html
@@ -11,15 +11,15 @@
 </head>
 <body>
     <div class="page_title">December 2023</div>
-    <div class="page_subtitle">Court</div>
+    <div class="page_subtitle">Court and Traveler</div>
 
 
     <div class="container">
        <div class="event_december_court"></div>
        <div class="event_december_court_judge"></div>
        <div class="event_december_court_judge_attacked"></div>
-
-
+       <div class="event_traveler"></div>
+       <div class="event_traveler_entrance"></div>
     </div>
 
     
