Added February 2024 and added to notable builds

--- a/late_january.html
+++ b/late_january.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <div class="page_title">January 2023</div>
+    <div class="page_title">January 2024</div>
     <div class="page_subtitle">Survivor and Flower Fights</div>
 
 
@@ -30,7 +30,7 @@
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
-            window.location.href = 'late_january.html';
+            window.location.href = 'february.html';
         });
     </script>
     </div>
