--- a/notable_builds.html
+++ b/notable_builds.html
@@ -15,15 +15,21 @@
     <div class="container">
         <div class="build_hash_new_base"></div>
         <div class="build_500am_base"></div>
-   
+        <div class="build_demon"></div>
+
         <div class="build_mail"></div>
         <div class="build_reno_tea_room"></div>
     
         <div class="build_prince_rat_axolotls"></div>
         <div class="build_pink_spawn"></div>
 
+
         <div class="build_aedan_house"></div>
         <div class="build_joe_utopia"></div>
+
+        <div class="build_tatooine"></div>
+
+        <div class="build_dreamwick"></div>
 
     </div>
 
