--- a/members.html
+++ b/members.html
@@ -34,6 +34,7 @@
     <div class="head_men"></div>
     <div class="head_women"></div>
     <div class="head_big"></div>
+    <div class="head_star"></div>
     <div class="head_cow"></div>
 </div>
 
