--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -19,6 +19,7 @@
         <a href="november.html">November 2023</a><br>
         <a href="early_december.html">December 2023</a><br>
         <a href="early_december.html">January 2024</a><br>
+        <a href="february.html">February 2024</a><br>
 
 
     </p>
