Added to notable builds

--- a/notable_builds.html
+++ b/notable_builds.html
@@ -30,6 +30,7 @@
         <div class="build_tatooine"></div>
 
         <div class="build_dreamwick"></div>
+        <div class="build_joe_city"></div>
 
     </div>
 
