--- a/march.html
+++ b/march.html
@@ -3,19 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>February 2024</title>
+    <title>March 2024</title>
     <link rel="stylesheet" href="main_style.css">
     <link rel="stylesheet" href="event_after_style.css">
 
 
 </head>
 <body>
-    <div class="page_title">February 2024</div>
-    <div class="page_subtitle">Sizzle War</div>
+    <div class="page_title">March 2024</div>
+    <div class="page_subtitle">Misc. and End Track</div>
 
 
     <div class="container">
-        <div class="event_sizzle"></div>
+        <div class="event_end_1"></div>
+        <div class="event_end_2"></div>
+
+        <div class="event_march_laying_1"></div>
+        <div class="event_march_laying_2"></div>
+        <div class="event_march_laying_3"></div>
+
 
     </div>
 
@@ -33,7 +39,7 @@
     <div class="click-area left-side">
         <script>
             document.querySelector('.left-side').addEventListener('click', function() {
-                window.location.href = 'late_january.html';
+                window.location.href = 'february.html';
             });
         </script>
     </div>
