--- a/november.html
+++ b/november.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="page_title">November 2023</div>
-    <div class="page_subtitle">Misc. Images and Creation of Maltsburg</div>
+    <div class="page_subtitle">Misc. and Creation of Maltsburg</div>
 
 
     <div class="container">
