--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
-            window.location.href = 'about.html';
+            window.location.href = 'pages/about.html';
         });
     </script>
     </div>
