--- a/pages/members.html
+++ b/pages/members.html
@@ -3,8 +3,8 @@
 
 <head>
 <title>Server Members</title>
-<link rel="stylesheet" href="main_style.css">
-<link rel="stylesheet" href="head_style.css">
+<link rel="stylesheet" href="../main_style.css">
+<link rel="stylesheet" href="../styles/head_style.css">
 
 </head>
 
@@ -39,13 +39,13 @@
 </div>
 
 <!-- <p><br><br></p> -->
-<div class="back"><a href="table_of_contents.html">Back to Table of Contents</a></div>
+<div class="back"><a href="../pages/table_of_contents.html">Back to Table of Contents</a></div>
 
 
 <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
-            window.location.href = 'notable_builds.html';
+            window.location.href = '../pages/notable_builds.html';
         });
     </script>
     </div>
@@ -53,7 +53,7 @@
 <div class="click-area left-side">
     <script>
         document.querySelector('.left-side').addEventListener('click', function() {
-            window.location.href = 'table_of_contents.html';
+            window.location.href = '../pages/table_of_contents.html';
         });
     </script>
 </div>
