--- a/pages/notable_builds.html
+++ b/pages/notable_builds.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notable Builds</title>
-    <link rel="stylesheet" href="main_style.css">
-    <link rel="stylesheet" href="build_style.css">
+    <link rel="stylesheet" href="../main_style.css">
+    <link rel="stylesheet" href="../styles/build_style.css">
+
+    
 
 
 </head>
@@ -34,20 +36,20 @@
 
     </div>
 
-    <div class="back"><a href="table_of_contents.html">Back to Table of Contents</a></div>
+    <div class="back"><a href="../pages/table_of_contents.html">Back to Table of Contents</a></div>
 
 
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
-            window.location.href = 'september.html';
+            window.location.href = '../pages/september.html';
         });
     </script>
     </div>
     <div class="click-area left-side">
         <script>
             document.querySelector('.left-side').addEventListener('click', function() {
-                window.location.href = 'members.html';
+                window.location.href = '../pages/members.html';
             });
         </script>
     </div>
