--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="main_style.css">
+    <link rel="stylesheet" href="../main_style.css">
 
 </head>
 <body>
@@ -28,14 +28,14 @@
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
-            window.location.href = 'table_of_contents.html';
+            window.location.href = '../pages/table_of_contents.html';
         });
     </script>
     </div>
     <div class="click-area left-side">
         <script>
             document.querySelector('.left-side').addEventListener('click', function() {
-                window.location.href = 'index.html';
+                window.location.href = '../index.html';
             });
         </script>
     </div>
