--- a/pages/early_october.html
+++ b/pages/early_october.html
@@ -3,39 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Late October 2023</title>
-    <link rel="stylesheet" href="main_style.css">
-    <link rel="stylesheet" href="event_style.css">
+    <title>Early October 2023</title>
+    <link rel="stylesheet" href="../main_style.css">
+    <link rel="stylesheet" href="../styles/event_style.css">
 
 
 </head>
 <body>
     <div class="page_title">October 2023</div>
-    <div class="page_subtitle">Halloween Competitions</div>
+    <div class="page_subtitle">Opening of Second Shopping District</div>
 
     <div class="container">
-        <div class="event_bee_halloween"></div>
-        <div class="event_nova_halloween"></div>
-        <div class="event_nzzketch_halloween"></div>
-        <div class="event_picture_box_halloween"></div>
+        <div class="event_taco_bell"></div>
+        <div class="event_mahoose_shop"></div>
     </div>
-    
 
     
-    <div class="back"><a href="table_of_contents.html">Back to Table of Contents</a></div>
+    <div class="back"><a href="../pages/table_of_contents.html">Back to Table of Contents</a></div>
 
 
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
-            window.location.href = 'november.html';
+            window.location.href = '../pages/late_october.html';
         });
     </script>
     </div>
     <div class="click-area left-side">
         <script>
             document.querySelector('.left-side').addEventListener('click', function() {
-                window.location.href = 'early_october.html';
+                window.location.href = '../pages/september.html';
             });
         </script>
     </div>
