--- a/pages/february.html
+++ b/pages/february.html
@@ -3,36 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Early October 2023</title>
-    <link rel="stylesheet" href="main_style.css">
-    <link rel="stylesheet" href="event_style.css">
+    <title>February 2024</title>
+    <link rel="stylesheet" href="../main_style.css">
+    <link rel="stylesheet" href="../styles/event_after_style.css">
 
 
 </head>
 <body>
-    <div class="page_title">October 2023</div>
-    <div class="page_subtitle">Opening of Second Shopping District</div>
+    <div class="page_title">February 2024</div>
+    <div class="page_subtitle">Sizzle War</div>
+
 
     <div class="container">
-        <div class="event_taco_bell"></div>
-        <div class="event_mahoose_shop"></div>
+        <div class="event_sizzle"></div>
+
     </div>
 
     
-    <div class="back"><a href="table_of_contents.html">Back to Table of Contents</a></div>
+    <div class="back"><a href="../pages/table_of_contents.html">Back to Table of Contents</a></div>
 
 
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
-            window.location.href = 'late_october.html';
+            window.location.href = '../pages/march.html';
         });
     </script>
     </div>
     <div class="click-area left-side">
         <script>
             document.querySelector('.left-side').addEventListener('click', function() {
-                window.location.href = 'september.html';
+                window.location.href = '../pages/late_january.html';
             });
         </script>
     </div>
