--- a/pages/late_december.html
+++ b/pages/late_december.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Late December 2023</title>
-    <link rel="stylesheet" href="main_style.css">
-    <link rel="stylesheet" href="event_style.css">
+    <link rel="stylesheet" href="../main_style.css">
+    <link rel="stylesheet" href="../styles/event_style.css">
 
 
 </head>
@@ -23,20 +23,20 @@
     </div>
 
     
-    <div class="back"><a href="table_of_contents.html">Back to Table of Contents</a></div>
+    <div class="back"><a href="../pages/table_of_contents.html">Back to Table of Contents</a></div>
 
 
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
-            window.location.href = 'early_january.html';
+            window.location.href = '../pages/early_january.html';
         });
     </script>
     </div>
     <div class="click-area left-side">
         <script>
             document.querySelector('.left-side').addEventListener('click', function() {
-                window.location.href = 'early_december.html';
+                window.location.href = '../pages/early_december.html';
             });
         </script>
     </div>
