--- a/pages/late_january.html
+++ b/pages/late_january.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Late January 2024</title>
-    <link rel="stylesheet" href="main_style.css">
-    <link rel="stylesheet" href="event_after_style.css">
+    <link rel="stylesheet" href="../main_style.css">
+    <link rel="stylesheet" href="../styles/event_after_style.css">
 
 
 </head>
@@ -24,20 +24,20 @@
     </div>
 
     
-    <div class="back"><a href="table_of_contents.html">Back to Table of Contents</a></div>
+    <div class="back"><a href="../pages/table_of_contents.html">Back to Table of Contents</a></div>
 
 
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
-            window.location.href = 'february.html';
+            window.location.href = '../pages/february.html';
         });
     </script>
     </div>
     <div class="click-area left-side">
         <script>
             document.querySelector('.left-side').addEventListener('click', function() {
-                window.location.href = 'mid_january.html';
+                window.location.href = '../pages/mid_january.html';
             });
         </script>
     </div>
