--- a/pages/mid_january.html
+++ b/pages/mid_january.html
@@ -3,37 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>February 2024</title>
-    <link rel="stylesheet" href="main_style.css">
-    <link rel="stylesheet" href="event_after_style.css">
+    <title>Mid January 2024</title>
+    <link rel="stylesheet" href="../main_style.css">
+    <link rel="stylesheet" href="../styles/event_after_style.css">
 
 
 </head>
 <body>
-    <div class="page_title">February 2024</div>
-    <div class="page_subtitle">Sizzle War</div>
+    <div class="page_title">January 2024</div>
+    <div class="page_subtitle">Wedding</div>
 
 
     <div class="container">
-        <div class="event_sizzle"></div>
-
+        <div class="event_wedding_1"></div>
+        <div class="event_wedding_2"></div>
     </div>
 
     
-    <div class="back"><a href="table_of_contents.html">Back to Table of Contents</a></div>
+    <div class="back"><a href="../pages/table_of_contents.html">Back to Table of Contents</a></div>
 
 
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
-            window.location.href = 'march.html';
+            window.location.href = '../pages/late_january.html';
         });
     </script>
     </div>
     <div class="click-area left-side">
         <script>
             document.querySelector('.left-side').addEventListener('click', function() {
-                window.location.href = 'late_january.html';
+                window.location.href = '../pages/early_january.html';
             });
         </script>
     </div>
