--- a/pages/april.html
+++ b/pages/april.html
@@ -3,26 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>March 2024</title>
+    <title>April 2024</title>
     <link rel="stylesheet" href="../main_style.css">
     <link rel="stylesheet" href="../styles/event_after_style.css">
 
 
 </head>
 <body>
-    <div class="page_title">March 2024</div>
-    <div class="page_subtitle">Misc. and End Track</div>
+    <div class="page_title">April 2024</div>
+    <div class="page_subtitle">Spawn Revamp</div>
 
 
     <div class="container">
-        <div class="event_end_1"></div>
-        <div class="event_end_2"></div>
-
-        <div class="event_march_laying_1"></div>
-        <div class="event_march_laying_2"></div>
-        <div class="event_march_laying_3"></div>
-
-
+        <div class="event_mail_1"></div>
+        <div class="event_mail_2"></div>
+        <div class="event_bee_farm"></div>
+        <div class="event_sizzle_stand"></div>
     </div>
 
     
@@ -39,7 +35,7 @@
     <div class="click-area left-side">
         <script>
             document.querySelector('.left-side').addEventListener('click', function() {
-                window.location.href = '../pages/february.html';
+                window.location.href = '../pages/march.html';
             });
         </script>
     </div>
