--- a/pages/table_of_contents.html
+++ b/pages/table_of_contents.html
@@ -21,6 +21,7 @@
         <a href="../pages/early_january.html">January 2024</a><br>
         <a href="../pages/february.html">February 2024</a><br>
         <a href="../pages/march.html">March 2024</a><br>
+        <a href="../pages/april.html">April 2024</a><br>
 
     </p>
 
