--- a/pages/june.html
+++ b/pages/june.html
@@ -3,22 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>April 2024</title>
+    <title>June 2024</title>
     <link rel="stylesheet" href="../main_style.css">
-    <link rel="stylesheet" href="../styles/event_after_style.css">
+    <link rel="stylesheet" href="../styles/event_after_after_style.css">
 
 
 </head>
 <body>
-    <div class="page_title">April 2024</div>
-    <div class="page_subtitle">Spawn Revamp</div>
+    <div class="page_title">June 2024</div>
+    <div class="page_subtitle">Witch Hut Hunt</div>
 
 
     <div class="container">
-        <div class="event_mail_1"></div>
-        <div class="event_mail_2"></div>
-        <div class="event_bee_farm"></div>
-        <div class="event_sizzle_stand"></div>
+        <div class="event_witch_1"></div>
+        <div class="event_witch_2"></div>
+        <div class="event_witch_3"></div>
+        <div class="event_witch_4"></div>
+        <div class="event_witch_5"></div>
+        <div class="event_witch_6"></div>
+        <div class="event_witch_7"></div>
+        <div class="event_witch_8"></div>
     </div>
 
     
@@ -28,14 +32,14 @@
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
-            window.location.href = '../pages/early_may.html';
+            window.location.href = '../pages/june.html';
         });
     </script>
     </div>
     <div class="click-area left-side">
         <script>
             document.querySelector('.left-side').addEventListener('click', function() {
-                window.location.href = '../pages/march.html';
+                window.location.href = '../pages/late_may.html';
             });
         </script>
     </div>
