--- a/pages/table_of_contents.html
+++ b/pages/table_of_contents.html
@@ -22,6 +22,8 @@
         <a href="../pages/february.html">February 2024</a><br>
         <a href="../pages/march.html">March 2024</a><br>
         <a href="../pages/april.html">April 2024</a><br>
+        <a href="../pages/early_may.html">May 2024</a><br>
+        <a href="../pages/june.html">June 2024</a><br>
 
     </p>
 
