--- a/pages/june.html
+++ b/pages/june.html
@@ -32,7 +32,7 @@
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
-            window.location.href = '../pages/june.html';
+            window.location.href = '../pages/end.html';
         });
     </script>
     </div>
