--- a/pages/members.html
+++ b/pages/members.html
@@ -36,7 +36,12 @@
     <div class="head_big"></div>
     <div class="head_star"></div>
     <div class="head_cow"></div>
+    <div class="head_may"></div>
+    <div class="head_tara"></div>
+    <div class="head_fatty"></div>
+    <div class="head_witch"></div>
 </div>
+<p>(In no particular order)</p>
 
 <!-- <p><br><br></p> -->
 <div class="back"><a href="../pages/table_of_contents.html">Back to Table of Contents</a></div>
