--- a/pages/about.html
+++ b/pages/about.html
@@ -13,9 +13,9 @@
     <p>
 
         This is a website that contains images and memories from the Akoot & Co. Minecraft server. 
-        Why I decided to make this website is so I would have somewhere (other than the Discord) to save, post, and share screenshots from the server.
+        Why I decided to make this website is so we could have somewhere (other than the Discord) to save, post, and share screenshots from the server.
         This is my first project in web dev and I hope you enjoy.<br>
-        - Hash
+        - Gianna
         <br><br>
         <b>Important: Click on the sides to navigate between pages and hover over images for more information.</b>
 
