--- a/pages/end.html
+++ b/pages/end.html
@@ -21,7 +21,7 @@
     <p>
 
         Created by lilhashbrown with help from IndiaPaleAle, Viscalis, and Xanxus542.
-        <!-- <a href="https://github.com/crustydogseyebooger/yearbook">Check out the code here</a><br> -->
+        <a href="https://github.com/crustydogseyebooger/yearbook">Check out the code here</a><br>
     </p>
 
     <!-- <div class="back"><a href="table_of_contents.html">Back to Table of Contents</a></div> -->
