--- a/pages/members.html
+++ b/pages/members.html
@@ -40,6 +40,7 @@
     <div class="head_tara"></div>
     <div class="head_fatty"></div>
     <div class="head_witch"></div>
+    <div class="head_noot"></div>
 </div>
 <p>(In no particular order)</p>
 
