--- a/pages/members.html
+++ b/pages/members.html
@@ -41,6 +41,7 @@
     <div class="head_fatty"></div>
     <div class="head_witch"></div>
     <div class="head_noot"></div>
+    <div class="head_yfd"></div>
 </div>
 <p>(In no particular order)</p>
 
