Updated end page

--- a/pages/end.html
+++ b/pages/end.html
@@ -15,12 +15,13 @@
         <div class="head_hash"></div>
         <div class="head_ipa"></div>
         <div class="head_visc"></div>
+        <div class="head_yfd"></div>
         <div class="head_xan"></div>
     </div>
 
     <p>
 
-        Created by lilhashbrown with help from IndiaPaleAle, Viscalis, and Xanxus542.
+        Made by lilhashbrown with help from IndiaPaleAle, Viscalis,<br> Xanxus542, and _ydf.<br>
         <a href="https://github.com/crustydogseyebooger/yearbook">Check out the code here</a><br>
     </p>
 
