Added to notable builds

--- a/pages/notable_builds.html
+++ b/pages/notable_builds.html
@@ -33,6 +33,8 @@
         <div class="build_dreamwick"></div>
         <div class="build_joe_city"></div>
 
+        <div class="build_graveyard"></div>
+
     </div>
 
     <div class="back"><a href="../pages/table_of_contents.html">Back to Table of Contents</a></div>
