--- a/pages/members.html
+++ b/pages/members.html
@@ -41,6 +41,10 @@
     <div class="head_witch"></div>
     <div class="head_noot"></div>
     <div class="head_yfd"></div>
+    <div class="head_sailor"></div>
+    <div class="head_tac"></div>
+    <div class="head_fan"></div>
+    <div class="head_beet"></div>
     <div class="head_hash"></div>
 </div>
 <p>(In no particular order)</p>
