--- a/pages/members.html
+++ b/pages/members.html
@@ -45,6 +45,7 @@
     <div class="head_tac"></div>
     <div class="head_fan"></div>
     <div class="head_beet"></div>
+    <div class="head_sloth"></div>
     <div class="head_hash"></div>
 </div>
 <p>(In no particular order)</p>
