Updated members, added Mid June, added Lore Icebergs

--- a/pages/end.html
+++ b/pages/end.html
@@ -38,7 +38,7 @@
     <div class="click-area left-side">
         <script>
             document.querySelector('.left-side').addEventListener('click', function() {
-                window.location.href = '../pages/june.html';
+                window.location.href = '../pages/mid_june.html';
             });
         </script>
     </div>
