--- a/pages/members.html
+++ b/pages/members.html
@@ -46,6 +46,7 @@
     <div class="head_fan"></div>
     <div class="head_beet"></div>
     <div class="head_sloth"></div>
+    <div class="head_axo"></div>
     <div class="head_hash"></div>
 </div>
 <p>(In no particular order)</p>
