--- a/pages/notable_builds.html
+++ b/pages/notable_builds.html
@@ -34,6 +34,7 @@
         <div class="build_joe_city"></div>
 
         <div class="build_graveyard"></div>
+        <div class="build_500am_storage"></div>
 
     </div>
 
@@ -43,7 +44,7 @@
     <div class="click-area right-side">
     <script>
         document.querySelector('.right-side').addEventListener('click', function() {
-            window.location.href = '../pages/september.html';
+            window.location.href = '../pages/icebergs.html';
         });
     </script>
     </div>
