--- a/pages/september.html
+++ b/pages/september.html
@@ -34,7 +34,7 @@
     <div class="click-area left-side">
         <script>
             document.querySelector('.left-side').addEventListener('click', function() {
-                window.location.href = '../pages/notable_builds.html';
+                window.location.href = '../pages/icebergs.html';
             });
         </script>
     </div>
