--- a/pages/table_of_contents.html
+++ b/pages/table_of_contents.html
@@ -14,6 +14,7 @@
         <a href="../pages/about.html">About</a><br>
         <a href="../pages/members.html">Server Members</a><br>
         <a href="../pages/notable_builds.html">Notable Builds</a><br>
+        <a href="../pages/icebergs.html">Lore Icebergs</a><br>
         <a href="../pages/september.html">September 2023</a><br>
         <a href="../pages/early_october.html">October 2023</a><br>
         <a href="../pages/november.html">November 2023</a><br>
@@ -23,7 +24,7 @@
         <a href="../pages/march.html">March 2024</a><br>
         <a href="../pages/april.html">April 2024</a><br>
         <a href="../pages/early_may.html">May 2024</a><br>
-        <a href="../pages/june.html">June 2024</a><br> 
+        <a href="../pages/early_june.html">June 2024</a><br> 
 
     </p>
 
