--- a/pages/mid_june.html
+++ b/pages/mid_june.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>June 2024</title>
+    <title>Mid June 2024</title>
     <link rel="stylesheet" href="../main_style.css">
     <link rel="stylesheet" href="../styles/misc_style.css">
 
 
 </head>
 <body>
-    <div class="page_title">Mid June 2024</div>
+    <div class="page_title">June 2024</div>
     <div class="page_subtitle">Misc. and Flower Fight Arena</div>
 
 
