--- a/pages/members.html
+++ b/pages/members.html
@@ -47,6 +47,7 @@
     <div class="head_beet"></div>
     <div class="head_sloth"></div>
     <div class="head_axo"></div>
+    <div class="head_salt"></div>
     <div class="head_hash"></div>
 </div>
 <p>(In no particular order)</p>
