Started redoing the CSS

--- a/pages/end.html
+++ b/pages/end.html
@@ -12,16 +12,15 @@
     <!-- <div class="page_title">End</div> -->
     <!-- <div class="page_subtitle">Welcome to the Akoot & Co. Yearbook</div> -->
     <div class="title_container">
-        <div class="head_hash"></div>
-        <div class="head_ipa"></div>
-        <div class="head_visc"></div>
-        <div class="head_yfd"></div>
-        <div class="head_xan"></div>
+        <div class="heads" id="head_hash"></div>
+        <div class="heads" id="head_ipa"></div>
+        <div class="heads" id="head_visc"></div>
+        <div class="heads" id="head_xan"></div>
+        <div class="heads" id="head_yfd"></div>
     </div>
 
     <p>
-
-        Made by lilhashbrown with help from IndiaPaleAle, Viscalis,<br> Xanxus542, and _ydf.<br>
+        Made by lilhashbrown with help from IndiaPaleAle, Viscalis,<br> Xanxus542, and _yfd.<br>
         <a href="https://github.com/crustydogseyebooger/yearbook">Check out the code here</a><br>
     </p>
 
