--- a/pages/members.html
+++ b/pages/members.html
@@ -12,43 +12,43 @@
 <div class="page_title">Server Members</div>
 
 <div class="container">
-    <div class="head_xan"></div>
-    <div class="head_ipa"></div>
-    <div class="head_akoot"></div>
-    <div class="head_reno"></div>
-    <div class="head_joe"></div>
-    <div class="head_snark"></div>
-    <div class="head_sego"></div>
-    <div class="head_visc"></div>
-    <div class="head_rat"></div>
-    <div class="head_500am"></div>
-    <div class="head_vnrs"></div>
-    <div class="head_bub"></div>
-    <div class="head_jozef"></div>
-    <div class="head_neoma"></div>
-    <div class="head_mahoose"></div>
-    <div class="head_nova"></div>
-    <div class="head_harpy"></div>
-    <div class="head_yamda"></div>
-    <div class="head_men"></div>
-    <div class="head_women"></div>
-    <div class="head_big"></div>
-    <div class="head_star"></div>
-    <div class="head_cow"></div>
-    <div class="head_may"></div>
-    <div class="head_tara"></div>
-    <div class="head_fatty"></div>
-    <div class="head_witch"></div>
-    <div class="head_noot"></div>
-    <div class="head_yfd"></div>
-    <div class="head_sailor"></div>
-    <div class="head_tac"></div>
-    <div class="head_fan"></div>
-    <div class="head_beet"></div>
-    <div class="head_sloth"></div>
-    <div class="head_axo"></div>
-    <div class="head_salt"></div>
-    <div class="head_hash"></div>
+    <div class="heads" id="head_ipa"></div>
+    <div class="heads" id="head_akoot"></div>
+    <div class="heads" id="head_xan"></div>
+    <div class="heads" id="head_reno"></div>
+    <div class="heads" id="head_joe"></div>
+    <div class="heads" id="head_snark"></div>
+    <div class="heads" id="head_sego"></div>
+    <div class="heads" id="head_visc"></div>
+    <div class="heads" id="head_rat"></div>
+    <div class="heads" id="head_500am"></div>
+    <div class="heads" id="head_vnrs"></div>
+    <div class="heads" id="head_bub"></div>
+    <div class="heads" id="head_jozef"></div>
+    <div class="heads" id="head_cow"></div>
+    <div class="heads" id="head_neoma"></div>
+    <div class="heads" id="head_harpy"></div>
+    <div class="heads" id="head_mahoose"></div>
+    <div class="heads" id="head_men"></div>
+    <div class="heads" id="head_women"></div>
+    <div class="heads" id="head_yamda"></div>
+    <div class="heads" id="head_zap"></div>
+    <div class="heads" id="head_big"></div>
+    <div class="heads" id="head_nova"></div>
+    <div class="heads" id="head_star"></div>
+    <div class="heads" id="head_may"></div>
+    <div class="heads" id="head_tara"></div>
+    <div class="heads" id="head_fatty"></div>
+    <div class="heads" id="head_witch"></div>
+    <div class="heads" id="head_noot"></div>
+    <div class="heads" id="head_yfd"></div>
+    <div class="heads" id="head_sailor"></div>
+    <div class="heads" id="head_tac"></div>
+    <div class="heads" id="head_beet"></div>
+    <div class="heads" id="head_sloth"></div>
+    <div class="heads" id="head_axo"></div>
+    <div class="heads" id="head_salt"></div>
+    <div class="heads" id="head_hash"></div>
 </div>
 <p>(In no particular order)</p>
 
